terraform/kasten/k8s/silly-pod-aws.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: silly-app
---
apiVersion: v1
kind: Service
metadata:
  name: silly-app
  namespace: silly-app
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  type: LoadBalancer
  selector:
    app: silly-app
  ports:
    - name: http
      port: 8000
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: silly-app
  namespace: silly-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: silly-app
  template:
    metadata:
      labels:
        app: silly-app
    spec:
      containers:
        - name: silly-app
          image: ghcr.io/chkpwd/silly-app:v0.3.0
          ports:
            - name: http
              containerPort: 8000
          volumeMounts:
            - name: data
              mountPath: /app/images
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ReadWriteOnce]
        resources:
          requests:
            storage: 5Gi
